feat: functionality wise done

--- a/src/app/pages/domain-home/domain-home.component.html
+++ b/src/app/pages/domain-home/domain-home.component.html
@@ -1,1 +1,3 @@
-<p>domain-home works!</p>
+<h1>Domain Insight</h1>
+<app-search-form (domainSearch)="handleSearch($event)"></app-search-form>
+<app-domain-details [domainInfo]="domainData"></app-domain-details>
