fix: css design added for navbar and search bar

--- a/src/app/shared/components/form/search-form/search-form.component.html
+++ b/src/app/shared/components/form/search-form/search-form.component.html
@@ -1,5 +1,7 @@
+<div class="d-flex align-items-center justify-content-center">
 <mat-form-field class="full-width" appearance="outline">
     <mat-label>Enter domain</mat-label>
     <input matInput [formControl]="domainControl" >
 </mat-form-field>
 <button mat-raised-button color="primary" (click)="onSubmit()">Analyse</button>
+</div>
