--- a/src/app/pages/domain-home/domain-home.component.html
+++ b/src/app/pages/domain-home/domain-home.component.html
@@ -1,3 +1,3 @@
-<h1>Domain Insight</h1>
+<app-navbar></app-navbar>
 <app-search-form (domainSearch)="handleSearch($event)"></app-search-form>
 <app-domain-details [domainInfo]="domainData"></app-domain-details>
