add: design wise done, css enhancement is there

--- a/src/app/shared/components/form/search-form/search-form.component.html
+++ b/src/app/shared/components/form/search-form/search-form.component.html
@@ -1,7 +1,22 @@
-<div class="d-flex align-items-center justify-content-center">
-<mat-form-field class="full-width" appearance="outline">
-    <mat-label>Enter domain</mat-label>
-    <input matInput [formControl]="domainControl" >
-</mat-form-field>
-<button mat-raised-button color="primary" (click)="onSubmit()">Analyse</button>
+<div>
+    <div class="body-container">
+  <h2 class="text-center">Get detailed information about a domain name, including its registrar, registration date, expiration date, and more. </h2>
+
+  </div>
+  <div class="search-container">
+    <mat-form-field appearance="outline" class="search-input">
+      <!-- <mat-label>Enter domain</mat-label> -->
+      <input
+        matInput
+        [formControl]="domainControl"
+        placeholder="Search your domain"
+      />
+    </mat-form-field>
+
+    <button mat-raised-button (click)="onSubmit()" class="search-btn" [disabled]="loading">
+      <!-- <mat-icon>search</mat-icon> -->
+      Analyse
+    </button>
+  </div>
+
 </div>
