feat: hurray, website ready for deployment v1.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div *ngIf="loading$ | async" class="preloader">
+  <div class="spinner-container">
+    <div class="spinner"></div>
+    <div class="spinner-text">Domain Insight</div>
+  </div>
+</div>
+
+
 <app-navbar></app-navbar>
 <div class="content">
   <router-outlet></router-outlet>
