--- a/src/app/shared/components/form/search-form/search-form.component.html
+++ b/src/app/shared/components/form/search-form/search-form.component.html
@@ -9,7 +9,7 @@
       <input
         matInput
         [formControl]="domainControl"
-        placeholder="Search your domain"
+        placeholder="Search for a domain, e.g., vwaran.tech"
       />
     </mat-form-field>
 
