--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -1,5 +1,12 @@
-<mat-toolbar class="footer-toolbar" >
-  <div class="footer-content">
-    <span class="footer-text">&copy; {{ currentYear }} Domain Insight. All rights reserved. &nbsp; &nbsp; Developed by <a href="https://vwaran.tech" class="link-footer-txt">Vigneshwaran M</a> </span>
-  </div>
-</mat-toolbar>
+<div class="footer-container">
+  <mat-toolbar class="footer-toolbar">
+    <div class="footer-content">
+      <span class="footer-text">
+        <span class="footer-block">&copy; {{ currentYear }} Domain Insight. All rights reserved.</span>
+        <span class="footer-block">Developed by 
+          <a href="https://vwaran.tech" class="link-footer-txt">Vigneshwaran M</a>
+        </span>
+      </span>
+    </div>
+  </mat-toolbar>
+</div>
