--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,10 +43,15 @@ $dark-theme: mat.define-dark-theme((
 
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Berkshire+Swash&family=Outfit:wght@100..900&family=Pacifico&family=Rampart+One&display=swap');
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: var(--bg-color);
   color: inherit;
@@ -483,7 +488,7 @@ mat-nav-list a {
   background-color: #fff2f2;
   display: flex;
   flex-direction: column;
-  padding: 60px 150px;
+  padding: 40px 150px;
   align-items: center;
   justify-content: center;
   gap: 8px;
@@ -573,7 +578,7 @@ mat-nav-list a {
   }
 
   .text-center{
-    padding-top: 3rem;
+    padding-top: 2rem;
     text-align: justify;
   }
    .footer-text {
@@ -587,8 +592,8 @@ mat-nav-list a {
   }
 
   .error-box {
-    padding: 40px 20px;
-    margin-bottom: 30px;
+    padding: 20px;
+    margin-bottom: 5px;
   }
 
 }
@@ -603,17 +608,17 @@ mat-nav-list a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1.5rem;
-  padding: 1.5rem 1rem;
+  padding: 1rem 0.5rem;
   
 }
 
   .text-center{
-    padding-top: 3rem;
+    padding-top: 2rem;
     text-align: justify;
   }
 
   .error-box {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   .sidenav-container{
