--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,20 +3,13 @@
 @include mat.core(); // Required base styles
 
 // Define themes
-$light-theme: mat.define-light-theme((
-  color: (
-    primary: mat.define-palette(mat.$blue-palette),
-    accent: mat.define-palette(mat.$grey-palette),
-  )
-));
+$light-theme: mat.define-light-theme((color: (primary: mat.define-palette(mat.$blue-palette),
+        accent: mat.define-palette(mat.$grey-palette),
+      )));
 
-$dark-theme: mat.define-dark-theme((
-  color: (
-    primary: mat.define-palette(mat.$blue-grey-palette),
-    accent: mat.define-palette(mat.$blue-grey-palette),
-  )
-
-));
+$dark-theme: mat.define-dark-theme((color: (primary: mat.define-palette(mat.$blue-grey-palette),
+        accent: mat.define-palette(mat.$blue-grey-palette),
+      )));
 
 @include mat.all-component-typographies($light-theme);
 @include mat.all-component-densities($light-theme);
@@ -43,15 +36,26 @@ $dark-theme: mat.define-dark-theme((
 
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Berkshire+Swash&family=Outfit:wght@100..900&family=Pacifico&family=Rampart+One&display=swap');
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
+html,
+body,
+app-root,
+mat-sidenav-container,
+mat-sidenav-content {
+  height: 100%;
+}
 
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  // min-height: 100vh;
   overflow-x: hidden;
   background-color: var(--bg-color);
   color: inherit;
@@ -62,7 +66,19 @@ html, body {
 app-root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100vh;
+}
+
+.mat-drawer-container {
+  position: inherit !important;
+  height: 100%;
+  z-index: 1;
+  color: var(--mat-sidenav-content-text-color);
+  background-color: var(--mat-sidenav-content-background-color);
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  display: block;
+  overflow: hidden;
 }
 
 .sidenav-container {
@@ -79,11 +95,25 @@ mat-sidenav {
   height: 100% !important;
 }
 
-.mt-1 { margin-top: 0.25rem; }
-.mt-2 { margin-top: 0.5rem; }
-.mt-3 { margin-top: 1rem; }
-.mt-4 { margin-top: 1.5rem; }
-.mt-5 { margin-top: 3rem; }
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 1rem;
+}
+
+.mt-4 {
+  margin-top: 1.5rem;
+}
+
+.mt-5 {
+  margin-top: 3rem;
+}
 
 
 
@@ -98,7 +128,7 @@ mat-sidenav {
 
 
 
-.container{
+.container {
   width: 100%;
   max-width: 1200px;
   padding: 0 1rem;
@@ -106,7 +136,7 @@ mat-sidenav {
   display: flex;
   align-items: center;
   text-align: center;
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .body-container {
@@ -119,8 +149,8 @@ mat-sidenav {
   align-items: center;
   justify-content: center;
   text-align: center;
-   box-sizing: border-box;
-   overflow-x: hidden;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .brand {
@@ -136,7 +166,7 @@ mat-sidenav {
 }
 
 
-.spacer{
+.spacer {
   flex: 1;
 }
 
@@ -163,7 +193,7 @@ mat-nav-list a {
 }
 
 /* drawer styles */
- ::ng-deep .mobile-drawer {
+::ng-deep .mobile-drawer {
   position: fixed;
   top: 0;
   left: 0;
@@ -177,7 +207,7 @@ mat-nav-list a {
 }
 
 
-.drawer-header{
+.drawer-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -186,9 +216,9 @@ mat-nav-list a {
 
 .search-container {
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
-  gap: 0rem; 
+  gap: 0rem;
   padding: 1rem 1rem;
   flex-wrap: nowrap;
 }
@@ -197,24 +227,25 @@ mat-nav-list a {
 .search-input {
   display: inline-flex;
   width: 450px;
-  align-items: center; 
-  margin: 0; 
+  align-items: center;
+  margin: 0;
 }
 
 .search-btn {
-  height: 57px !important; 
+  height: 57px !important;
   padding: 0 1.75rem !important;
   font-size: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  background-color: rgb(170, 170, 253) !important;
   color: white !important;
+  background-color: rgb(145, 145, 252) !important;
   border-top-left-radius: 0px !important;
   border-bottom-left-radius: 0px !important;
-  &:hover{
-    background-color: rgb(145, 145, 252) !important;
+
+  &:hover {
+    background-color: rgb(170, 170, 253) !important;
     color: white !important;
   }
 }
@@ -238,7 +269,7 @@ mat-nav-list a {
 }
 
 .domain-card {
-  background-color: var(--bg-color) !important;// Match your dark theme
+  background-color: var(--bg-color) !important; // Match your dark theme
   color: inherit;
   border-radius: 1rem;
   border: 1.5px solid #9bb0ff !important;
@@ -255,6 +286,7 @@ mat-nav-list a {
 
   .card-icon {
     background: transparent;
+
     mat-icon {
       font-size: 27px;
       color: #9bb0ff;
@@ -272,41 +304,52 @@ mat-nav-list a {
     font-weight: 700;
     color: inherit;
     margin-top: 0.5rem;
-    word-break: break-word; 
+    word-break: break-word;
     overflow-wrap: break-word;
     overflow: hidden;
   }
 }
 
 @keyframes fadeIn {
-  from{
-   opacity: 0;
-   transform: scale(0.95);
+  from {
+    opacity: 0;
+    transform: scale(0.95);
   }
-  to{
-   opacity: 1;
-   transform: scale(1);
+
+  to {
+    opacity: 1;
+    transform: scale(1);
   }
 }
 
-@keyframes pulse{
-  0%{
+@keyframes pulse {
+  0% {
     opacity: 1;
   }
-  50%{
+
+  50% {
     opacity: 0.4;
 
   }
-  100%{
+
+  100% {
     opacity: 1;
   }
 }
 
 .loader-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 200px;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.loader-txt{
+  display: block !important;
+  padding-top: 1rem;
 }
 
 .spinner-img {
@@ -315,11 +358,11 @@ mat-nav-list a {
 }
 
 .content {
-  flex: 1; 
+  flex: 1;
   padding: 0rem;
 }
 
-.footer-container{
+.footer-container {
   width: 100%;
   // max-width: 1200px;
   padding: 0.25rem 1rem;
@@ -331,7 +374,7 @@ mat-nav-list a {
   text-align: center;
   box-sizing: border-box;
   overflow-x: hidden;
-  border-top: var(--border-top); 
+  border-top: var(--border-top);
 
 }
 
@@ -387,26 +430,26 @@ mat-nav-list a {
   opacity: 0.8;
 }
 
-.toggle-button-container{
- display: flex;
- justify-content: center;
- margin-top: 1rem;
- margin-bottom: 4rem;
+.toggle-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
 }
 
-.domain-view-more{
- background-color: rgb(170, 170, 253) !important;
- color: white !important; 
- padding: 10px 20px;
- border-radius: 4px;
- border: none;
- font-weight: 500;
- font-size: 14px;
- box-sizing: border-box;
- cursor: pointer;
+.domain-view-more {
+  color: white !important;
+  background-color: rgb(145, 145, 252) !important;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: none;
+  font-weight: 500;
+  font-size: 14px;
+  box-sizing: border-box;
+  cursor: pointer;
 
-  &:hover{
-    background-color: rgb(145, 145, 252) !important;
+  &:hover {
+    background-color: rgb(170, 170, 253) !important;
     color: white !important;
   }
 }
@@ -421,7 +464,7 @@ mat-nav-list a {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 300px; // Optional: for consistency across skeleton cards
+  max-width: 300px; 
   margin: 0.5rem;
 
   .skeleton-header {
@@ -474,9 +517,11 @@ mat-nav-list a {
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.4;
   }
+
   100% {
     opacity: 1;
   }
@@ -496,19 +541,19 @@ mat-nav-list a {
   font-weight: 500;
   width: fit-content;
   margin: 0 auto;
-  max-width: 100%; 
+  max-width: 100%;
   overflow-x: hidden;
   flex-wrap: wrap;
 
-  .mat-icon-error{
-      font-size: 45px;
-      height: 50px;
-      width: 50px;
-      color: #f64f4f;
- 
+  .mat-icon-error {
+    font-size: 45px;
+    height: 50px;
+    width: 50px;
+    color: #f64f4f;
+
   }
 
-  .mat-icon-txt{
+  .mat-icon-txt {
     font-size: 16px;
     color: #f64f4f;
 
@@ -517,14 +562,17 @@ mat-nav-list a {
 
 .preloader {
   position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: white;
   z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; /* stack spinner and text vertically */
+  flex-direction: column;
+  /* stack spinner and text vertically */
 }
 
 .spinner-container {
@@ -560,28 +608,72 @@ mat-nav-list a {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
 
 
+.bg-image-insight {
+  width: 260px;
+  padding: 10px;
+  pointer-events: none;
+}
+
+.charts-wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin: 2rem 1rem;
+  max-width: 1200px;
+  padding: 0rem 1rem;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.chart-card{
+  background-color: var(--bg-color) !important;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+  transition: transform 0.3s ease;
+  text-align: center;
+
+
+  &:hover {
+    transform: translateY(-5px);
+  }
+
+  h3{
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+  }
+}
+
 
 @media (max-width: 600px) {
+  .container {
+    padding: 0rem 0rem !important;
+  }
+  .brand {
+    font-size: 1.4rem;
+  }
   .search-container {
     flex-direction: column;
     align-items: stretch;
   }
 
-  .search-input{
+  .search-input {
     width: 100%;
   }
 
-  .text-center{
+  .text-center {
     padding-top: 2rem;
     text-align: justify;
   }
-   .footer-text {
+
+  .footer-text {
     flex-direction: column;
     font-size: 0.9rem;
   }
@@ -597,26 +689,33 @@ mat-nav-list a {
   }
 
   .content {
-  flex: 0.5; 
-  padding: 0rem;
- }
+    flex: 0.5;
+    padding: 0rem;
+  }
+
+  .bg-image-insight {
+    width: 230px;
+    padding: 10px;
+    margin-bottom: 20px;
+    pointer-events: none;
+  }
 }
 
 
 @media (max-width: 768px) {
   .domain-details-container {
-  width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  box-sizing: border-box;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1.5rem;
-  padding: 1.5rem 1rem;
-  
-}
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1.5rem;
+    padding: 1.5rem 1rem;
 
-  .text-center{
+  }
+
+  .text-center {
     padding-top: 2rem;
     text-align: justify;
   }
@@ -627,14 +726,14 @@ mat-nav-list a {
 
   }
 
-  .sidenav-container{
+  .sidenav-container {
     border-bottom: var(--border-bottom);
   }
 
 
- .footer-container{
-  border-top: none;
- }
+  .footer-container {
+    border-top: none;
+  }
 }
 
 @media (min-width: 769px) {
@@ -642,13 +741,14 @@ mat-nav-list a {
     margin-top: -23px !important;
     margin-left: -15px !important;
   }
-   .card-value {
+
+  .card-value {
     font-size: 1.2rem;
     font-weight: 700;
     color: inherit;
     margin-top: 0.5rem;
     // word-break: break-all !important;
-    word-break: break-word; 
+    word-break: break-word;
     overflow-wrap: break-word;
     overflow: hidden;
   }
@@ -657,14 +757,11 @@ mat-nav-list a {
 
 @media (min-width: 768px) and (max-width: 860px) {
   .content {
-  flex: 0.75; 
-  padding: 0rem;
- }
-  .footer-container{
-  border-top: none;
- }
+    flex: 0.75;
+    padding: 0rem;
+  }
+
+  .footer-container {
+    border-top: none;
+  }
 }
-
-
-
-
