feat: new domain name added

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="contact-wrapper">
   <div class="contact-box">
     <h1>Redirecting to Contact Page</h1>
-    <p>You will be redirected to <strong>vwaran.tech</strong> Contact Us page in {{ countdown }} seconds...</p>
-    <p>If you're not redirected, <a href="https://vwaran.tech/contact" target="_blank" rel="noopener noreferrer">click here</a>.</p>
+    <p>You will be redirected to <strong>vwaran.com</strong> Contact Us page in {{ countdown }} seconds...</p>
+    <p>If you're not redirected, <a href="https://vwaran.com/contact" target="_blank" rel="noopener noreferrer">click here</a>.</p>
   </div>
 </div>
