--- a/src/app/shared/components/layout/footer/footer.component.html
+++ b/src/app/shared/components/layout/footer/footer.component.html
@@ -4,9 +4,12 @@
       <span class="footer-text">
         <span class="footer-block">&copy; {{ currentYear }} Domain Insight. All rights reserved.</span>
         <span class="footer-block">Developed by 
-          <a href="https://vwaran.tech" class="link-footer-txt">Vigneshwaran M</a>
+          <a href="https://vwaran.com" class="link-footer-txt">Vigneshwaran M</a>
         </span>
       </span>
     </div>
   </mat-toolbar>
+
+
+  
 </div>
