feat: chart functionality and filter added

--- a/src/app/pages/domain-home/domain-home.component.html
+++ b/src/app/pages/domain-home/domain-home.component.html
@@ -4,8 +4,18 @@
   <img [src]="loaderSrc" alt="Loading..." class="spinner-img" />
   <h3 class="loader-txt">Please wait while we process your request.</h3>
 </div>
-<!-- <app-chart-insight [domainInfo]="domainData"></app-chart-insight> -->
-<app-domain-card *ngIf="!isLoading && domainData" [domainInfo]="domainData"></app-domain-card>
+
+<div class="body-container" *ngIf="!isLoading && domainData" >
+  <app-insight-filter [selected]="insightFilter" (filterChange)="onFilterChange($event)"></app-insight-filter>
+</div>
+
+<div *ngIf="!isLoading && domainData && (insightFilter === 'all' || insightFilter === 'visual')">
+  <app-chart-insight *ngIf="!isLoading && domainData" [domainInfo]="domainData"></app-chart-insight>
+</div>
+
+<div *ngIf="!isLoading && domainData && (insightFilter === 'all' || insightFilter === 'statistical')">
+  <app-domain-card *ngIf="!isLoading && domainData" [domainInfo]="domainData "></app-domain-card>
+</div>
 
 <div class="body-container" *ngIf="!isLoading && !(errorMessage?.length ?? 0 > 0) && !domainData">
 <img src="../../../assets/img/banner_search_insights_1.png" alt="Domain Banner" class="bg-image-insight" />
@@ -15,4 +25,3 @@
   <mat-icon class="mat-icon-error">public</mat-icon>
    <span class="mat-icon-txt">{{errorMessage}}</span> 
 </div>
-
