--- a/src/app/shared/components/card/domain-card/domain-card.component.html
+++ b/src/app/shared/components/card/domain-card/domain-card.component.html
@@ -1,3 +1,6 @@
+<div class="body-container">
+  <h1 class="card-header-top">Statistical Insights</h1>
+</div>
 <ng-container *ngIf="isLoading">
   <div class="domain-details-container">
     <div class="skeleton-card" *ngFor="let s of skeletonArray">
@@ -13,7 +16,6 @@
     </div>
   </div>
 </ng-container>
-
 
 <ng-container *ngIf="!isLoading">
   <div
@@ -32,9 +34,9 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="toggle-button-container" *ngIf="domainDetails.length >= 6">
-      <button mat-button (click)="toggleView()" class="domain-view-more">
-        {{ showAll ? "View Less" : "View More" }}
-      </button>
-    </div>
+  <div class="toggle-button-container" *ngIf="domainDetails.length >= initialLimit">
+    <button mat-button (click)="toggleView()" class="domain-view-more">
+      {{ showAll ? "View Basic" : "View Advanced" }}
+    </button>
+  </div>
 </ng-container>
