--- a/src/app/shared/components/layout/navbar/navbar.component.html
+++ b/src/app/shared/components/layout/navbar/navbar.component.html
@@ -53,7 +53,7 @@
         <!-- Hamburger icon for mobile -->
         <ng-container *ngIf="isMobile" >
           <button mat-icon-button (click)="toggleDrawer()">
-            <mat-icon>menu</mat-icon>
+            <mat-icon>notes</mat-icon>
           </button>
         </ng-container>
       </div>
